Builds following b74cc23dc4 produce errors - Linux #77478

Closed
opened 2020-06-06 01:18:11 +02:00 by Alaska · 7 comments
Member

System Information
Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GTX 1050Ti 440.82

Blender Version
Broken: 2.90.0 b74cc23dc4
Worked: 2.90.0 fc672ce8e2

Short description of error:
Building Blender with the patch b74cc23dc4 or newer causes errors to occur during the build process.

The error it spits out is:

/home/Alaska/Documents/blender-git/blender/source/blender/blenfont/intern/blf_glyph.c: In function ‘blf_glyph_add’:
/home/Alaska/Documents/blender-git/blender/source/blender/blenfont/intern/blf_glyph.c:319:54: error: conversion from ‘FT_Pos’ {aka ‘const long int’} to ‘float’ may change value [-Werror=conversion]
       font->face->glyph->advance.x += (int) (extra_x * 1.05f);
                                                      ^
**System Information** Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GTX 1050Ti 440.82 **Blender Version** Broken: 2.90.0 b74cc23dc4 Worked: 2.90.0 fc672ce8e2 **Short description of error:** Building Blender with the patch b74cc23dc4 or newer causes errors to occur during the build process. The error it spits out is: ``` /home/Alaska/Documents/blender-git/blender/source/blender/blenfont/intern/blf_glyph.c: In function ‘blf_glyph_add’: /home/Alaska/Documents/blender-git/blender/source/blender/blenfont/intern/blf_glyph.c:319:54: error: conversion from ‘FT_Pos’ {aka ‘const long int’} to ‘float’ may change value [-Werror=conversion] font->face->glyph->advance.x += (int) (extra_x * 1.05f); ^ ```
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Author
Member

Added subscriber: @Harley

Added subscriber: @Harley
Author
Member

@Harley mind taking a look?

@Harley mind taking a look?
Harley Acheson self-assigned this 2020-06-06 01:22:08 +02:00
Member

Sure will!

Sure will!
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Member

As mentioned in the bug report form

What not to report here
For feature requests, feedback, questions or issues building Blender, see communication channels.

that being said, @Harley should commit a fix any second

As mentioned in the bug report form >What not to report here >For feature requests, feedback, questions or issues building Blender, see communication channels. that being said, @Harley should commit a fix any second
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77478
No description provided.