Fix for T77478: Quiet Conversion Error/Warning

Quiet warning/error about int and float multiplication.

Differential Revision: https://developer.blender.org/D7893

Reviewed by Ray Molenkamp